--- a/config.yml
+++ b/config.yml
@@ -9,7 +9,7 @@ params:
   # Conference info
   Name: "GeoIndustry@ACM SIGSPATIAL 2023"
   Description: "International Workshop on Spatial Big Data and AI for Industrial Applications@ACM SIGSPATIAL 2023"
-  # Date: "Monday November 13, 2023"
+  Date: "Monday November 13, 2023"
   # Price: "Only $100" # If your event is free, just comment this line
   # Venue: ""
   # Address: ""
