--- a/config.yml
+++ b/config.yml
@@ -11,8 +11,8 @@ params:
   Description: "International Workshop on Spatial Big Data and AI for Industrial Applications@ACM SIGSPATIAL 2023"
   Date: "Monday November 13, 2023"
   # Price: "Only $100" # If your event is free, just comment this line
-  # Venue: ""
-  # Address: ""
+  Venue: "Radisson Blu Hotel"
+  Address: "Congresspl. 2, 20355"
   City:  "Hamburg"
   State: "Germany"
   Images: ["/img/logo.png"]
@@ -24,8 +24,8 @@ params:
     - intro
     - organizer
     # - speakers
-    # - schedule    
-    # - location
+    - schedule    
+    - location
     - cfp
     - deadline
     #- contact
@@ -33,11 +33,11 @@ params:
   # Titles which you can translate to other languages
   Titles:
     intro: "About"
-    # location: "Location"
+    location: "Location"
     cfp: "Call For Papers"
     organizer: "Organization Committee"
     # speakers: "Invited Talk"
-    # schedule: "Schedule"
+    schedule: "Schedule"
     deadline: "Important Dates"
     # sponsors: "Sponsors"
     # partners: "Partners"
@@ -47,7 +47,7 @@ params:
   # If you don't want this, just remove the callToAction property.
   CallToAction:
     text: "Register now"
-    link: ""
+    link: "https://sigspatial2023.sigspatial.org/registration/"
 
   intro:
     text: "With the rapid revolution and increasing availability of geospatial data, not only academia but also industry aspire 
@@ -87,9 +87,133 @@ params:
     submissionsite: "https://easychair.org/conferences/?conf=geoindustry2023"
 
   schedule:
-    # - time: "09:00 - 09:10"
-    #   title: "Opening Remarks"
-    # - time: "09:10 - 10:10"
+    - time: "13:30 - 13:40"
+      title: "Opening Remarks"
+    - time: "13:40 - 14:00"
+      title: "Spatial experiment identification (SPEX-ID): a method to identify
+      experimental conditions from spatial information in digital agricultural data and beyond"
+      authors: "Taylor Aune, Huan Gu, Dagmawi Woldesenbet, Tuyen Le and Jeffery Sauer"
+      abstract: "On-farm experiments (OFE) are the cornerstone of evaluating interventions on 
+      important outcomes like crop yield, disease resistance, soil fertility, and more. However, 
+      prospectively planning and implementing all OFE of interest is challenging in 
+      resource-constrained settings. In addition, the quality of an OFE is determined by 
+      the spatial arrangement of the treatment conditions. Experimental conditions can exist 
+      in digital agriculture data, although there may be no information indicating that an 
+      experiment took place. We introduce a novel method that can identify potential experimental 
+      arrangements on a field using only the spatial information on the experimental conditions of 
+      interest. We call this method spatial experiment identification (SPEX-ID). We explain the 
+      method in detail and highlight its ability to identify several common types of spatial 
+      arrangements in on-farm experiments. We discuss the potential of this method in a large 
+      sample of nearly 90,000 fields from a large commercial digital agriculture database where 
+      the intervention of interest was the application of fungicide. From this sample we were able 
+      to identify more than 12,000 fields with potential experimental conditions. None of these fields 
+      were previously known to contain experimental conditions. We highlight several examples of subfield 
+      regions with high-quality experimental arrangements and discuss several avenues for future research."
+    - time: "14:00 - 14:20"
+      title: "Floorplan Generation from Noisy Point Clouds"
+      authors: "Anselmo Talotta, Valentin Radu and Lorenzo Sorgi"
+      abstract: "Floorplans are useful for navigating indoor spaces, for resource allocation and management 
+      of indoor spaces. But in the absence of readily available floorplan drawings, these are hard to generate. 
+      In this work, we enhance a solution for generating floorplans from orderly point clouds to be more robust 
+      to noisy measurements. With this approach, point clouds are converted into a density map, which is then 
+      used for detecting the shape of rooms and relevant landmarks, such as doors and windows. We improve the 
+      robustness of the room detector by training in two stages, firstly using synthetic data with point clouds 
+      extracted from 3D graphical representations of indoor spaces; and secondly, extending the training of the 
+      model in a new domain by using real-world data collected with Tango devices and their vision based depth 
+      estimation. This training gets the domain closer to our final goal, of generating floorplans from easily 
+      collected point cloud scans in the real-world. Finally, we showcase the capability of our solution when 
+      operating with noisy Lidar scans collected from a drone with posture estimation."
+    - time: "14:20 - 14:40"
+      title: "A new approach to assessing perceived walkability: Combining Street View Imagery 
+      with Multimodal Contrastive Learning Model"
+      authors: "Xinyi Liu, James Haworth and Meihui Wang"
+      abstract: "Walkability is becoming increasingly important in urban planning, public health, and 
+      environmental protection. Traditional assessment tools like streetscape images and semantic segmentation 
+      focus on objective factors, while questionnaires as the main tool for perceived walkability are limited 
+      by cost and scale. This study introduces a new method using the Multimodal Contrastive Learning Model, 
+      CLIP, to assess perceived walkability by analysing both tangible and subjective factors such as safety 
+      and attractiveness. The method compares perceived with physical walkability by scoring street view 
+      images with a customized scale. Initial results indicate CLIP can identify pedestrian-friendly 
+      streetscapes that might score low on physical metrics. While its accuracy needs more evaluation, CLIP 
+      offers a cost-effective alternative without needing extensive labelled datasets. This method can be 
+      combined with objective pedestrian assessment methods to serve as reference information for various 
+      industries such as real estate, transportation planning, and tourism."
+    - time: "14:40 - 15:00"
+      title: "Exploring The Use of OpenStreetMap Data (OSM) and GPS Traces for Validating 
+      Driving Routes and Identifying Prohibited Maneuvers in Direction Services"
+      authors: "Antonios Karatzoglou, Tijana Bekic, Mohit Khanna, Vashutosh Agrawal, 
+      Aleksandar Matejevic, Varun Kakkar, Nikola Perin, Jacob Whitbeck, Dragomir Yankov, 
+      Michael R. Evans, Nikola Todic, Goran Predovic and Aleksandar Samardzija"
+      abstract: "As people increasingly adopt a more flexible and mobile way of living, map applications 
+      and navigation services have gained increasingly in importance. In order for these services to be 
+      useful to their users, their providers need to ensure and maintain a high quality in terms of accuracy 
+      and reliability. Keeping track of the service quality is essential, especially in a dynamic domain 
+      like this, where the underlying road network data might change from one day to the next due for instance 
+      to temporal road closures or turn restrictions. Although the changes might be small and local, they can 
+      still have a big impact on the routing quality of direction services. The focus of this study lies on 
+      providing the means to avoid such high-impact scenarios in a cost-efficient manner. In particular, we 
+      focus on the legality aspect of routes that reflects the degree of prohibited by law maneuvers within 
+      a suggested route. First, we define a set of appropriate sample-based metrics to help us track a route's 
+      legality. Then, we introduce an automated pipeline based on OSM data and GPS traces that is able to support 
+      and reduce the load of our human judges to identify illegal maneuvers in a sample of candidate routes. 
+      Finally, we evaluate our pipeline using a random sample of 1,306 US routes while a local map data provider 
+      as well as human judgement via visual inspection serve as our ground truth. Our results show that our 
+      method is able to sufficiently cover most of the route sections in our candidate route samples and 
+      identify 90% of all illegal maneuvers while reducing the load of manual human judgement by 86%."
+    - time: "15:00 - 15:30"
+      title: "Coffee Break"
+    - time: "15:30 - 15:50"
+      title: "LocFree: WiFi RTT-based Device-Free Indoor Localization System"
+      authors: "Mohamed Mohsen, Hamada Rizk, Hirozumi Yamaguchi and Moustafa Youssef"
+      abstract: "Gaining knowledge of a person's movement in the environment without needing a specialized 
+      device raises the need for device-free indoor localization systems that could be leveraged in many 
+      applications including IoT, security, etc. Wi-Fi is one of the most widely adopted technologies for 
+      indoor location determination tasks due to its ubiquity. Existing device-free indoor localization 
+      systems rely on the utilization of the Received Signal Strength Indicator (RSSI) and the Wi-Fi 
+      Channel State Information (CSI). However, RSSI is highly sensitive to environmental noise such as 
+      multi-path interference and fading which causes degradation in the system's performance. In addition, 
+      CSI suffers a lack of standardization which necessitates the requirement for special hardware or 
+      software. In this work, we present LocFree, a deep-learning-based device-free indoor localization 
+      system that handles the challenges of RSSI and CSI by leveraging the Time of Flight (ToF) information 
+      obtained using the IEEE 802.11mc Fine Time Measurement (FTM) protocol. The FTM protocol measures the 
+      Round Trip Time (RTT) between two Wi-Fi devices which is influenced by the human-body blockage. 
+      Consequently, LocFree trains a deep classification model using the RTT data indicating the person's 
+      existence in the area. Finally, LocFree employs a smoothing stage that enables location determination 
+      with fine-grained accuracy. The evaluation of LocFree in two realistic environments demonstrates its 
+      efficacy, achieving a median localization accuracy of 1.56 meters. This surpasses the performance 
+      of state-of-the-art techniques by at least 56%."
+    - time: "15:50 - 16:10"
+      title: "Cellular Network Optimization by Deep Reinforcement Learning and AI-Enhanced Ray Tracing"
+      authors: "Zhangyu Wang, Serkan Isci, Yaron Kanza, Velin Kounev and Yusef Shaqalle"
+      abstract: "In this paper we study the use of deep reinforcement learning that is supported by a ray 
+      tracer, on top of a detailed 3D model of the geospatial environment, for optimization of antena tilts 
+      in cellular networks. We propose two novel mechanisms—geospatial importance sampling and multi-path 
+      coefficient—to efficiently pass geospatial information to the reinforcement learning model. We show 
+      that this approach can be used for fast and scalable optimization of tilt levels of cellular antennas. 
+      We present an experimental evaluation that compares the use of reinforcement learning to greedy search, 
+      simulated annealing and Bayesian optimization. Our study shows that reinforcement learning is effective 
+      and can cope with optimization problems that are at a greater scale than the settings the other 
+      algorithms can cope with."
+    - time: "16:10 - 16:30"
+      title: "Optimization of shared bicycle location in Wuhan city based on multi-source geospatial big data"
+      authors: "Shaohua Wang, Runqiao Wang, Cheng Su, Liang Zhou, Wenda Wang and Haojian Liang"
+      abstract: "With urban development and a growing focus on sustainability, shared bicycles have become a 
+      popular mode of eco-friendly transportation. However, issues like chaotic parking, excessive deployment, 
+      and suboptimal distribution need solutions. This study thoroughly analyzes how shared bicycles are used 
+      in Wuhan, focusing on time and location patterns to inform better docking point selection. It uses GPS 
+      data from Mobike shared bicycles in October 2018, point of interest (POI) data for bus stations, other 
+      facility POI data, and population distribution data for Wuhan. The research employs mathematical and 
+      statistical analysis, spatial analysis, geographical detectors, and optimization using heuristic methods 
+      and the Gurobi solver. Firstly, the study uncovers usage patterns in Wuhan, highlighting travel trends 
+      across different times and regions, and providing essential insights for selecting docking points. 
+      Secondly, it identifies the strong relationship between factors like points of interest, public 
+      transportation facilities, population density, and shared bicycle usage. The study establishes a model 
+      called the Maximum Covering Location Problem (MCLP) for selecting docking points. This model, solved 
+      using genetic algorithms and Gurobi, considers demand intensity for an optimal docking point layout. 
+      In summary, this study deepens our understanding of how shared bicycles are used in Wuhan and the 
+      significance of key factors. It creates a model for selecting docking points, offering a scientifically 
+      grounded approach and valuable insights for urban transportation planning and sustainability."
+
     #   authors: "Dr. John Krumm (Microsoft Research)"
     #   title: "Valuing Personal Location Data (Keynote Talk)" 
     #   abstract: "The whereabouts of regular people from their everyday lives is valuable, both to the people 
