Update schedule and PC.

--- a/config.yml
+++ b/config.yml
@@ -80,7 +80,7 @@ params:
     "Yiqun Xie (University of Maryland)"]
     pc_member: ["Jiahao Fan (University of Wisconsin-Madison)",
     "Mingquan Chen (Google)",
-    "Hongxu Ma (Google X)",
+    "Hongxu Ma (Mineral Earth Sciences)",
     "Chenxi Lin (PAII Inc)"]
 
   deadline:
